2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

	* gtk/gtktreeview.c (gtk_tree_view_button_press): Set cell data
	unconditionally.  (#152562, Federico Mena Quintero)

	* gtk/gtklayout.c (gtk_layout_add): Implement the GtkContainer::add 
	vfunc. (#154444, Lorenzo Gil Sanchez)

	* gtk/gtkuimanager.c (update_node): Also update smart separators 
	if the visibility of a  menuitem with a submenu changes.  (#153791,
	Christian Persch)

2004-10-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (check_is_folder): Don't free
	info too early.  (#154703, Morten Welinder)

2004-10-06  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (location_entry_create): Backport 
	the change from HEAD to not fill the entry with the currently
	selected file or folder.

	* gtk/gtkpaned.c (gtk_paned_compute_position): Reduce rounding 
	error.  (#154658, John Cupitt)

	* gtk/gtktreeselection.c (gtk_tree_selection_get_selected): Clear
	the iter instead of returning it unmodified. (#154186, Jonathan Blandford)

	* gtk/gtkfilechooserentry.c (gtk_file_chooser_entry_focus): Pop up
	the completions again after tab.  (#147700, Jens Bech Madsen)

	* gtk/gtktreeview.c (gtk_tree_view_search_iter): Set the cursor
	before changing the selection to make the file chooser preview
	update work better.  (#143826, Tommi Komulainen)

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Update

Wed Oct  6 00:45:04 2004    <timj@birnet.org>

	* gdk/gdkwindow.c (gdk_window_is_viewable): check the iteration window
	variable, not just the window passed in. fixes #145270.

Tue Oct  5 21:00:54 2004  Tim Janik  <timj@gtk.org>

        * gtk/gtkwidget.c (gtk_widget_size_allocate): applied owen's patch
	for conditional ALLOC_NEEDED flag updates to preserve resizing
	flag invariants.

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (gtk_ui_manager_add_ui): Set 
	action_name.  (#154526, John Finlay)
